WPF done for testing, field generation done. OOP improvements

--- a/MVVM Sample.csproj
+++ b/MVVM Sample.csproj
@@ -64,13 +64,25 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\Field.cs" />
-    <Compile Include="Models\NodeChain.cs" />
+    <Compile Include="Models\Chain.cs" />
     <Compile Include="Models\Node.cs" />
     <Compile Include="ViewModels\GameViewModel.cs" />
     <Compile Include="Views\GameWindow.xaml.cs">
       <DependentUpon>GameWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\Styles\Colors.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Styles\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Styles\StyleButtonNode.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
